Fixed bug in textarea on Firefox
Details:

- https://bugzilla.mozilla.org/show_bug.cgi?id=1099204
- http://stackoverflow.com/q/36121157/1518921
- http://stackoverflow.com/q/4374537/1518921
- http://pt.stackoverflow.com/q/147840/3635

--- a/chrome/css/editor.css
+++ b/chrome/css/editor.css
@@ -239,3 +239,10 @@ html.sen-editor-noscroll, html.sen-editor-noscroll body {
 .sen-editor-toolbar > a.sen-disabled:hover::before {
     display: none !important;
 }
+
+@-moz-document url-prefix() {
+    .sen-editor-full .wmd-input, .sen-editor-full .wmd-preview {
+        padding-bottom: 8px !important;
+    }
+}
+
